# volumerendering

./: Test_for_Triangle.cpp  readme.md
CS247_Assignment4/: CS247_Assignment4.sln  CS247_Assignment4.vcxproj
CS247_Assignment4/Debug/Win32/: CS247_Assignment4.exe.recipe  CS247_Assignment4.ilk  CS247_Assignment4.vcxproj.FileListAbsolute.txt  vc142.idb
CS247_Assignment4/Debug/Win32/CS247_As.548D5935.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CS247_Assignment4.lastbuildstate  CS247_Assignment4.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CS247_Assignment4/Source/: CS247_Assignment4.cpp  CS247_Assignment4.h  raycast_iso.glsl  tf_tables.h
Linux CS247 Volume Rendering/: CMakeLists.txt
Linux CS247 Volume Rendering/include/: CS247_Assignment4.h
Linux CS247 Volume Rendering/src/: CS247_Assignment4.cpp  raycast_dvr.glsl
